infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nest-typeorm
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: nest-typeorm.server.dev
      http:
        paths:
          - path: /?(.*)
            pathType: 'Prefix'
            backend:
              service:
                name: nest-typeorm-svc
                port:
                  number: 3000
